------------------------------------------------------------------------
r1985 | gaser | 2022-04-25 09:17:58

Changed paths:
M       CHANGES.txt
M       cat_parallelize.m
M       cat_plot_histogram.m
M       cat_vol_img2mip.m
MM      cat_vol_sanlm2.m
M       standalone/cat_standalone.sh
MM      standalone/cat_standalone_get_TIV.m

(1) Changed: Prevent heavy use of nano editor in cat_parallelize.m in 
             headless mode without GUI.
(2) Fixed:   Corrected bug in cat_vol_img2mip.m that was caused if one view
             was empty.

------------------------------------------------------------------------
r1984 | gaser | 2022-04-19 09:59:02 +0200 (Tue, 19 Apr 2022) | 49 lines

Changed paths:
M       CHANGES.txt
M       cat_amap.mex
M       cat_conf_factorial.m
M       cat_io_xml.m
M       cat_long_main.m
M       cat_ornlm.mex
M       cat_parallelize.m
M       cat_run.m
M       cat_sanlm.mex
M       cat_stat_TIV.m
M       cat_surf_results.m
M       cat_vbdist.mex
M       cat_vol_downcut.mex
M       cat_vol_eidist.mex
M       cat_vol_genus0.mex
M       cat_vol_gradient3.mex
M       cat_vol_interp3f.mex
M       cat_vol_laplace3.mex
M       cat_vol_laplace3R.mex
M       cat_vol_localstat.mex
M       cat_vol_median3.mex
M       cat_vol_median3c.mex
M       cat_vol_pbtp.mex
M       cat_vol_simgrow.mex
M       html/cat.txt
M       html/cat_licences.html
A       html/cat_shell.html
M       internal/cat_vol_cMRegularizarNLM3D.mex
M       standalone/cat_standalone.sh

(1) Changed: Extended cat_standalone.sh to also allow calling any SPM12/CAT12 
             batch in standard Matlab.
(2) Changed: Extended cat_surf_results to set title of colorbar and to
             automatically estimate path and filename for saving.
(3) Changed: Option for independence in cat_conf_factorial.m is now visible.
(4) Fixed:   Corrected bug in cat_stat_TIV.m where filename could not be 
             estimated using xml-structure.